feat: add a statistical interface for station